# welopc.com

./: .env.example  .gitignore  LICENSE  README.md
app/: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  skills.json
app/admin/: styles.css
app/admin-web/: app.js  index.html
app/agent/: index.html  starfield-root.js  style.css  styles.css
app/agent-vue/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/agent-vue/src/: App.vue
app/agent/assets/: agent-console-20260522.css  agent-redesign.css
app/configs/: ai_signal_timeline.yaml  mp_sources.json  opc_intelligence.example.json  opc_intelligence.json
app/data/: history.json  latest.json
app/deploy/: README.md  aihot_scheduled_refresh.sh  package_release.py  server_deploy.sh  upload_from_windows.cmd  upload_from_windows.ps1
app/frontend-vue/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend-vue/src/: main.ts
app/frontend-vue/src/components/: AppShell.vue  ArticleCard.vue  FilterBar.vue  MetricCard.vue  MpArticleCard.vue  StarfieldBackdrop.vue  StateBlock.vue
app/frontend-vue/src/router/: index.ts
app/site/ai-signal-live/: DESIGN.md  README.md  _headers  index.html
app/skills/welopc-aihot/: SKILL.md
app/src/ecom_research/: ai_signal_scheduler.py  aihot_service.py  analysis.py  cli.py  config.py  feishu_publish.py  intel_workspace.py  jd_enrich.py  models.py  openclaw_competitor_report.py  reporting.py  social_research.py  storage.py  strategy_report.py  utils.py
app/tests/: test_intel_workspace.py
web-dist/: index.html
(+35 files in other folders)
